--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:title" content="AgriLink360 - Agricultural Management Platform" />
     <meta property="og:description" content="Connect, trade, and grow with AgriLink360's comprehensive agricultural ecosystem" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReCFnzqGD8ZcqADrH3gzKSvvYGZlViPZ6R_w&s" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="/" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
